--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+        android:windowSoftInputMode="adjustResize|stateAlwaysHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LoginActivity"></activity>
-        <activity android:name=".activities.DashboardActivity"></activity>
+        <activity android:name=".activities.LoginActivity"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden|adjustPan">
+
+        </activity>
+        <activity android:name=".activities.DashboardActivity"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden|adjustPan">
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
