--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.smithbois.grocerygrab">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera.ar"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -11,25 +13,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-        android:windowSoftInputMode="adjustResize|stateAlwaysHidden|adjustPan">
+        <activity android:name=".activities.ARActivity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LoginActivity"
-            android:windowSoftInputMode="adjustResize|stateAlwaysHidden|adjustPan">
-
-        </activity>
-        <activity android:name=".activities.DashboardActivity"
-            android:windowSoftInputMode="adjustResize|stateAlwaysHidden|adjustPan">
-        </activity>
+        <activity
+            android:name=".activities.LoginActivity"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden|adjustPan"></activity>
+        <activity
+            android:name=".activities.DashboardActivity"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden|adjustPan"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+        <meta-data android:name="com.google.ar.core" android:value="required"/>
     </application>
 
 </manifest>
